# swap

./: Cargo.toml
data/: tokens.csv
data/uniswap/2020/05/: 17.csv.zst  18.csv.zst  19.csv.zst  20.csv.zst  21.csv.zst  22.csv.zst  23.csv.zst  24.csv.zst  25.csv.zst  26.csv.zst  27.csv.zst  28.csv.zst  29.csv.zst  30.csv.zst  31.csv.zst
data/uniswap/2020/06/: 01.csv.zst  02.csv.zst  03.csv.zst  04.csv.zst  05.csv.zst  06.csv.zst  07.csv.zst  08.csv.zst  09.csv.zst  10.csv.zst  11.csv.zst  12.csv.zst  13.csv.zst  14.csv.zst  15.csv.zst  16.csv.zst  17.csv.zst  18.csv.zst  19.csv.zst  20.csv.zst  21.csv.zst  22.csv.zst  23.csv.zst  24.csv.zst  25.csv.zst  26.csv.zst  27.csv.zst  28.csv.zst  29.csv.zst  30.csv.zst
data/uniswap/2020/07/: 01.csv.zst  02.csv.zst  03.csv.zst  04.csv.zst  05.csv.zst  06.csv.zst  07.csv.zst  08.csv.zst  09.csv.zst  10.csv.zst  11.csv.zst  12.csv.zst  13.csv.zst  14.csv.zst  15.csv.zst  16.csv.zst  17.csv.zst  18.csv.zst  21.csv.zst
gql/: schema.json  swaps.graphql
scripts/: compress.sh  init-psql.sh  join.sh  load-tokens.sh  load-uniswap.sh
sql/: tokens-ddl.sql  uniswap-ddl.sql
src/: erc20.rs  main.rs  uniswap.rs
