[package]
name = "uniswap-data"
version = "0.1.0"
authors = ["georgewhewell <georgerw@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
csv = "1.1"
env_logger = "0.7"
graphql_client = "0.9"
log = "0.4"
reqwest = { version = "0.10", features = [ "json" ]}
rust_decimal = { version = "1.8", features = ["serde"] }
serde = { version = "^1.0", features = ["derive"]}
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
tokio = { version = "0.2", features = ["full"] }
web3 = "0.13"